[project]
name = "marimo-stress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "altair>=5.4.1",
    "astropy>=6.1.6",
    "fastapi-keycloak>=1.0.11",
    "fastapi>=0.115.5",
    "marimo>=0.10.19",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars-lts-cpu[async,deltalake,fsspec,graph,plot,timezone]==1.13.1",
    "pyarrow==18.0.0",
    "pydantic<2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "skyfield>=1.49",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "anywidget>=0.9.13",
    "traitlets>=5.14.3",
    "diskcache>=5.6.3",
    "aiosqlite>=0.20.0",
    "nest-asyncio>=1.6.0",
    "pyarrow==18.0.0",
    "polars-lts-cpu==1.13.1",
    "deltalake==0.21.0",
    "connectorx>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.28.1",
    "vega-datasets>=0.9.0",
]
